--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "passport-local": "1.0.0",
     "request": "2.69.0",
     "slug": "0.9.1",
-    "underscore": "1.8.3"
+    "underscore": "1.8.3",
+    "connect-flash": "0.1.x",
+    "cookie": "0.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
