--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "1.15.0",
+    "connect-flash": "0.1.x",
+    "cookie": "0.3.1",
     "cors": "2.7.1",
     "ejs": "2.5.5",
     "errorhandler": "1.4.3",
     "express": "4.13.4",
     "express-jwt": "3.3.0",
     "express-session": "1.13.0",
+    "form-data": "^2.3.2",
+    "formidable": "^1.2.1",
     "jsonwebtoken": "7.1.9",
     "method-override": "2.3.5",
     "methods": "1.1.2",
@@ -31,9 +35,7 @@
     "passport-local": "1.0.0",
     "request": "2.69.0",
     "slug": "0.9.1",
-    "underscore": "1.8.3",
-    "connect-flash": "0.1.x",
-    "cookie": "0.3.1"
+    "underscore": "1.8.3"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
